--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(add_plot_label)
 export(axis.break.box)
 export(axis.break.slash)
 export(color.scale.jms)
+export(grid.layout)
 export(rescale.jms)
