--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(axis.break.box)
 export(axis.break.slash)
 export(color.scale.jms)
 export(grid.layout)
+export(pretty_ticks)
 export(rescale.jms)
 export(tick_interval)
