--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(axis.break.box)
 export(axis.break.slash)
 export(color.scale.jms)
 export(grid.layout)
+export(new_plot)
 export(pretty_ticks)
 export(rescale.jms)
 export(tick_interval)
