--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(axis.break.slash)
 export(color.scale.jms)
 export(grid.layout)
 export(new_plot)
+export(pretty_axes)
 export(pretty_ticks)
 export(rescale.jms)
 export(tick_interval)
