Add pretty plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(color.scale.jms)
 export(grid.layout)
 export(new_plot)
 export(pretty_axes)
+export(pretty_plot)
 export(pretty_ticks)
 export(rescale.jms)
 export(tick_interval)
