Add colour legend

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(CurlyBrace)
 export(add_plot_label)
 export(axis.break.box)
 export(axis.break.slash)
+export(color.legend.jms)
 export(color.scale.jms)
 export(grid.layout)
 export(new_plot)
