Add create data type function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(axis.break.box)
 export(axis.break.slash)
 export(color.legend.jms)
 export(color.scale.jms)
+export(create_data_type)
 export(grid.layout)
 export(is.jms.data.object)
 export(jms.data.object)
