Add support for loading files/directories and combining data objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,9 @@ export(create_data_type)
 export(grid.layout)
 export(is.jms.data.object)
 export(jms.data.object)
+export(list.files.sorted)
+export(load.combine)
+export(load.jms)
 export(new_plot)
 export(pretty_axes)
 export(pretty_plot)
