--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,12 @@ export(axis.break.box)
 export(axis.break.slash)
 export(color.legend.jms)
 export(color.scale.jms)
+export(combine.data.objects)
 export(create_data_type)
 export(grid.layout)
 export(is.jms.data.object)
 export(jms.data.object)
 export(list.files.sorted)
-export(load.combine)
 export(load.jms)
 export(new_plot)
 export(pretty_axes)
