Add calculate difference function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(add_plot_label)
 export(as.jms.data.object)
 export(axis.break.box)
 export(axis.break.slash)
+export(calculate_difference)
 export(color.legend.jms)
 export(color.scale.jms)
 export(combine.data.objects)
