--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(as.jms.data.object,matrix)
 S3method(lines,jms.data.object)
 S3method(plot,jms.data.object)
 S3method(print,jms.data.object)
+S3method(range,jms.data.object)
 export(CurlyBrace)
 export(add_plot_label)
 export(as.jms.data.object)
