--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,12 @@
 S3method("[",jms.data.object)
 S3method("xcol<-",default)
 S3method("xcol<-",jms.data.object)
+S3method("xlab<-",default)
+S3method("xlab<-",jms.data.object)
 S3method("ycol<-",default)
 S3method("ycol<-",jms.data.object)
+S3method("ylab<-",default)
+S3method("ylab<-",jms.data.object)
 S3method(as.jms.data.object,data.frame)
 S3method(as.jms.data.object,default)
 S3method(as.jms.data.object,matrix)
@@ -14,10 +18,16 @@ S3method(print,jms.data.object)
 S3method(range,jms.data.object)
 S3method(xcol,default)
 S3method(xcol,jms.data.object)
+S3method(xlab,default)
+S3method(xlab,jms.data.object)
 S3method(ycol,default)
 S3method(ycol,jms.data.object)
+S3method(ylab,default)
+S3method(ylab,jms.data.object)
 export("xcol<-")
+export("xlab<-")
 export("ycol<-")
+export("ylab<-")
 export(CurlyBrace)
 export(add_plot_label)
 export(as.jms.data.object)
@@ -41,4 +51,6 @@ export(read.table.jms)
 export(rescale.jms)
 export(tick_interval)
 export(xcol)
+export(xlab)
 export(ycol)
+export(ylab)
