Export expand_args

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(color.legend.jms)
 export(color.scale.jms)
 export(combine.data.objects)
 export(create_data_type)
+export(expand_args)
 export(grid.layout)
 export(is.jms.data.object)
 export(jms.data.object)
