Add export function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ S3method("ylab<-",jms.data.object)
 S3method(as.jms.data.object,data.frame)
 S3method(as.jms.data.object,default)
 S3method(as.jms.data.object,matrix)
+S3method(export,default)
+S3method(export,jms.data.object)
 S3method(lines,jms.data.object)
 S3method(plot,jms.data.object)
 S3method(print,jms.data.object)
@@ -43,6 +45,7 @@ export(color.scale.jms)
 export(combine.data.objects)
 export(create_data_type)
 export(expand_args)
+export(export)
 export(grid.layout)
 export(is.jms.data.object)
 export(jms.data.object)
