--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ S3method("xcol<-",default)
 S3method("xcol<-",jms.data.object)
 S3method("xlab<-",default)
 S3method("xlab<-",jms.data.object)
+S3method("y2col<-",default)
+S3method("y2col<-",jms.data.object)
 S3method("ycol<-",default)
 S3method("ycol<-",jms.data.object)
 S3method("ylab<-",default)
@@ -26,12 +28,15 @@ S3method(xcol,default)
 S3method(xcol,jms.data.object)
 S3method(xlab,default)
 S3method(xlab,jms.data.object)
+S3method(y2col,default)
+S3method(y2col,jms.data.object)
 S3method(ycol,default)
 S3method(ycol,jms.data.object)
 S3method(ylab,default)
 S3method(ylab,jms.data.object)
 export("xcol<-")
 export("xlab<-")
+export("y2col<-")
 export("ycol<-")
 export("ylab<-")
 export(CurlyBrace)
@@ -60,5 +65,6 @@ export(rescale.jms)
 export(tick_interval)
 export(xcol)
 export(xlab)
+export(y2col)
 export(ycol)
 export(ylab)
