--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ S3method("xlab<-",default)
 S3method("xlab<-",jms.data.object)
 S3method("y2col<-",default)
 S3method("y2col<-",jms.data.object)
+S3method("y2lab<-",default)
+S3method("y2lab<-",jms.data.object)
 S3method("ycol<-",default)
 S3method("ycol<-",jms.data.object)
 S3method("ylab<-",default)
@@ -30,6 +32,8 @@ S3method(xlab,default)
 S3method(xlab,jms.data.object)
 S3method(y2col,default)
 S3method(y2col,jms.data.object)
+S3method(y2lab,default)
+S3method(y2lab,jms.data.object)
 S3method(ycol,default)
 S3method(ycol,jms.data.object)
 S3method(ylab,default)
@@ -37,6 +41,7 @@ S3method(ylab,jms.data.object)
 export("xcol<-")
 export("xlab<-")
 export("y2col<-")
+export("y2lab<-")
 export("ycol<-")
 export("ylab<-")
 export(CurlyBrace)
@@ -66,5 +71,6 @@ export(tick_interval)
 export(xcol)
 export(xlab)
 export(y2col)
+export(y2lab)
 export(ycol)
 export(ylab)
