Add ilayout function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,8 @@ export(expand_args)
 export(export)
 export(grid.layout)
 export(iPlot)
+export(ilayout)
+export(ilayout.show)
 export(is.jms.data.object)
 export(jms.data.object)
 export(list.files.sorted)
