Add interactive grid layout

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(expand_args)
 export(export)
 export(grid.layout)
 export(iPlot)
+export(igrid.layout)
 export(ilayout)
 export(ilayout.show)
 export(is.jms.data.object)
