Rename iPlot --> iplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,8 +22,8 @@ S3method(as.jms.data.object,default)
 S3method(as.jms.data.object,matrix)
 S3method(export,default)
 S3method(export,jms.data.object)
-S3method(iPlot,default)
-S3method(iPlot,jms.data.object)
+S3method(iplot,default)
+S3method(iplot,jms.data.object)
 S3method(lines,jms.data.object)
 S3method(plot,jms.data.object)
 S3method(print,jms.data.object)
@@ -62,10 +62,10 @@ export(dyxlim)
 export(expand_args)
 export(export)
 export(grid.layout)
-export(iPlot)
 export(igrid.layout)
 export(ilayout)
 export(ilayout.show)
+export(iplot)
 export(is.jms.data.object)
 export(jms.data.object)
 export(list.files.sorted)
