--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(ilayout.show)
 export(iplot)
 export(is.jms.data.object)
 export(jms.data.object)
+export(layout.all)
 export(list.files.sorted)
 export(load.jms)
 export(new_plot)
