Add ability to hide trace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,12 @@ export(color.legend.jms)
 export(color.scale.jms)
 export(dyAxis.jms)
 export(dyBox)
+export(dyVisibility)
 export(dyxlim)
 export(grid.layout)
 export(ilayout)
 export(ilayout.addPlot)
+export(ilayout.hideTraceFromPlot)
 export(ilayout.show)
 export(layout.all)
 export(new_plot)
