--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(axis.break.slash)
 export(color.legend.jms)
 export(color.scale.jms)
 export(dyAxis.jms)
+export(dyBlankPlot)
 export(dyBox)
 export(dyVisibility)
 export(dyxlim)
