--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(ilayout.addPlot)
 export(ilayout.hideTraceFromPlot)
 export(ilayout.show)
 export(layout.all)
+export(nearest)
 export(new_plot)
 export(pretty_axes)
 export(pretty_plot)
