--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,5 +23,6 @@ export(pretty_axes)
 export(pretty_plot)
 export(pretty_ticks)
 export(rescale.jms)
+export(rescale.jms.unsafe)
 export(tick_interval)
 export(yscale)
