--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(CurlyBrace)
 export(add_plot_label)
 export(axis.break.box)
 export(axis.break.slash)
+export(boxed.labels)
 export(color.legend.jms)
 export(color.scale.jms)
 export(dyAxis.jms)
@@ -22,7 +23,8 @@ export(new_plot)
 export(pretty_axes)
 export(pretty_plot)
 export(pretty_ticks)
+export(rescale)
 export(rescale.jms)
 export(rescale.jms.unsafe)
+export(rescaleOntoY2)
 export(tick_interval)
-export(yscale)
