--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: Plotting.Utils
 Type: Package
 Title: Miscellaneous plotting functions
-Version: 0.1
-Date: 2016-11-07
+Version: 1.0.0
 Author: Josh Stratford <51674722+jmstrat@users.noreply.github.com>
 Maintainer: Josh Stratford <51674722+jmstrat@users.noreply.github.com>
 Description: Miscellaneous plotting functions
-License: Don't sell it
+License: GNU Affero General Public License v3.0 
 LazyData: TRUE
 RoxygenNote: 6.1.1
 ByteCompile: yes
