--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,7 @@ License: GNU Affero General Public License v3.0
 LazyData: TRUE
 RoxygenNote: 6.1.1
 ByteCompile: yes
+Imports:
+    stats,
+    graphics,
+    dygraphs
